<resources>
    <string name="app_name">Search</string>

    <!-- Strings related to login -->
    <string name="search_here">Search term</string>
    <string name="search">SEARCH</string>
    <string name="google_search">Google Search:</string>
    <string name="create_a_note_reminder">Create a note/reminder:</string>
    <string name="note_text">Note text</string>
    <string name="note_voice_typing">note voice typing</string>
    <string name="title_activity_create_event_result">CreateEventResultActivity</string>
    <string name="new_event">New event</string>
    <string name="created">Created:</string>
    <string name="voice_note">Voice reminder:</string>
    <string name="voice_search">Voice Search</string>
    <string name="settings_button">settings button</string>
    <string name="text_reminder">Text reminder:</string>
</resources>
