<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.quarck.minisearch.SearchActivity">

    <TextView
        android:id="@+id/textViewGsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_search"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:focusable="false"
        android:clickable="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        />

    <EditText
        android:id="@+id/searchQuery"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:ellipsize="end"
        android:hint="@string/search_here"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@drawable/border"
        android:importantForAutofill="no" />


    <TextView
        android:id="@+id/textViewMakeAReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_note_reminder"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        android:paddingTop="28dp"
        android:paddingBottom="4dp"
        android:focusable="false"
        android:clickable="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        />

    <EditText
        android:id="@+id/reminderText"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:ellipsize="end"
        android:hint="@string/note_text"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@drawable/border"
        android:importantForAutofill="no" />

    <!--Button
        android:id="@+id/search_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/search"
        android:textStyle="bold"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        tools:ignore="LabelFor"
        android:visibility="gone" /-->

    <ImageButton
        android:id="@+id/imageButtonVoiceTyping"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/baseline_keyboard_voice_black_48"
        android:contentDescription="@string/note_voice_typing" />


</LinearLayout>
